--- a/about/about.html
+++ b/about/about.html
@@ -69,7 +69,7 @@
                         </a>
                     </div>
                     <div class="brand-logo">
-                        <a href="index.html"><img src="../imgs/logo2021.png" alt="home" width="150px"></a>
+                        <a href="../index.html"><img src="../imgs/logo2021.png" alt="home" width="150px"></a>
                     </div>
                     <div class="navbarRight">
                         <a href="../sponsors/sponsors.html" class="navbarBtn from-center regularNav">
@@ -147,46 +147,50 @@
                 <br> <br> <br>
                 <span class="aboutHeadline">So, What is the Mardi Gras All About?</span>
                 <br><br>
-                <p> Mardi Gras, or Fat Tuesday, refers to events of the Carnival celebration, beginning on or after
+                <p class="aboutText"> Mardi Gras, or Fat Tuesday, refers to events of the Carnival celebration,
+                    beginning on or after
                     the Christian feasts of the Epiphany (Three Kings Day) and culminating on the day before Ash
                     Wednesday, which is known as Shrove Tuesday. Mardi Gras is French for "Fat Tuesday", reflecting
                     the practice of the last night of eating rich, fatty foods before the ritual Lenten sacrifices
-                    and fasting of the Lenten season. <br>
-                    <!--Dead Beans Photo-->
-                <div class="card img-fluid aboutTextImages" style="width:500px; float: left;">
+                    and fasting of the Lenten season. </p> <br>
+                <!--Dead Beans Photo-->
+                <div class="card img-fluid aboutCard" style="width:500px; float: left;">
                     <img class="card-img" src="../imgs/about/deadBeansKrew.jfif" alt="DeadBeansKrew">
-                    <p class="card-text"> <span style="font-weight: bolder;"> Dead Beans </span> – The Dead Beans,
+                    <p class="aboutCardText"> <span style="font-weight: bolder;"> Dead Beans </span> – The Dead Beans,
                         founded in 2018, wear suits inspired by mythology or traditions that deal with death,
                         mortality or the afterlife. They parade on Lundi Gras near Bayou St. John with music by
                         Panorama Brass Band and Bon Bon Vivant. Watch for the Dead Bean hearse! Photo above courtesy
                         of Missy Dalton.</p>
                 </div>
-                Related popular practices are associated with Shrovetide celebrations before the fasting and
-                religious obligations associated with the penitential season of Lent. In countries such as the
-                United Kingdom, Mardi Gras is also known as Shrove Tuesday, which is derived from the word
-                shrive, meaning "to administer the sacrament of confession to; to absolve".
-                <br>
-                The parades in New Orleans are organized by social clubs known as <span
-                    style="font-weight: bolder; font-style: italic;"> krewes</span>; most follow the same
-                parade schedule and route each year. <br> The earliest-established krewes were the Mistick Krewe
-                of
-                Comus, the earliest, Rex, the Knights of Momus and the Krewe of Proteus. Several modern "super
-                krewes" are well known for holding large parades and events, such as the Krewe of Endymion
-                (which is best known for naming celebrities as grand marshals for their parades), the Krewe of
-                Bacchus (similarly known for naming celebrities as their Kings), as well as the Zulu Social Aid
-                & Pleasure Club—a predominantly African American krewe. Float riders traditionally toss throws
-                into the crowds. The most common throws are strings of colorful plastic beads, doubloons,
-                decorated plastic "throw cups", Moon Pies, and small inexpensive toys, but throws can also
-                include lingerie and more sordid items. Major krewes follow the same parade schedule and route
-                each year.</p>
-                <!--Alter Ego Photo-->
-                <div class="card img-fluid" style="width:500px; float: right;">
+                <p class="aboutText">
+                    Related popular practices are associated with Shrovetide celebrations before the fasting and
+                    religious obligations associated with the penitential season of Lent. In countries such as the
+                    United Kingdom, Mardi Gras is also known as Shrove Tuesday, which is derived from the word
+                    shrive, meaning "to administer the sacrament of confession to; to absolve".
+                    <br>
+                    The parades in New Orleans are organized by social clubs known as<span
+                        style="font-weight: bolder; font-style: italic;"> krewes</span>; most follow the same
+                    parade schedule and route each year. <br> The earliest-established krewes were the Mistick Krewe
+                    of
+                    Comus, the earliest, Rex, the Knights of Momus and the Krewe of Proteus. Several modern "super
+                    krewes" are well known for holding large parades and events, such as the Krewe of Endymion
+                    (which is best known for naming celebrities as grand marshals for their parades), the Krewe of
+                    Bacchus (similarly known for naming celebrities as their Kings), as well as the Zulu Social Aid
+                    & Pleasure Club—a predominantly African American krewe. Float riders traditionally toss throws
+                    into the crowds. The most common throws are strings of colorful plastic beads, doubloons,
+                    decorated plastic "throw cups", Moon Pies, and small inexpensive toys, but throws can also
+                    include lingerie and more sordid items. Major krewes follow the same parade schedule and route
+                    each year.
+                    <!--Alter Ego Photo-->
+                <div class="card img-fluid aboutCard" style="width:500px; float: right;">
                     <img class="card-img" src="../imgs/about/alterEgo.jpg" alt="AlterEgoMarch">
-                    <p class=" card-text"> <span style="font-weight: bolder;"> Alter Ego Krewe </span> – The Alter
+                    <p class="aboutCardText"> <span style="font-weight: bolder;"> Alter Ego Krewe </span> –
+                        The Alter
                         Egos dancers, who first paraded in 2017, are noted for sisterhood and public service, not to
                         mention their signature purple wigs.</p>
                 </div>
-                <p> <span style="font-weight: bold;"> Amelia EarHawts Cabin Krewe –</span> This dance group was
+                <p class="aboutText"> <span style="font-weight: bold;"> Amelia EarHawts Cabin Krewe –</span> This dance
+                    group was
                     founded in 2014,
                     inspired by the tragic female aviation
                     pioneer who spent some of her last days at Lakefront Airport in New Orleans. They take off down
