--- a/media/media.html
+++ b/media/media.html
@@ -70,27 +70,27 @@
             <div class="row">
                 <div class="navbar">
                     <div class="navbarLeft">
-                        <a href="./index.html" class="navbarBtn from-center homeNav active">
+                        <a href="../index.html" class="navbarBtn from-center homeNav active">
                             Home
                         </a>
-                        <a href="./about/about.html" class="navbarBtn from-center regularNav">
+                        <a href="../about/about.html" class="navbarBtn from-center regularNav">
                             About
                         </a>
-                        <a href="./media/media.html" class="navbarBtn from-center regularNav">
+                        <a href="../media/media.html" class="navbarBtn from-center regularNav">
                             Media
                         </a>
                     </div>
                     <div class="brand-logo">
-                        <a href="index.html"><img src="./imgs/logo2021.png" alt="home" width="150px"></a>
+                        <a href="../index.html"><img src="../imgs/logo2021.png" alt="home" width="150px"></a>
                     </div>
                     <div class="navbarRight">
-                        <a href="./sponsors/sponsors.html" class="navbarBtn from-center regularNav">
+                        <a href="../sponsors/sponsors.html" class="navbarBtn from-center regularNav">
                             Sponsors
                         </a>
-                        <a href="./FAQ/faq.html" class="navbarBtn from-center regularNav">
+                        <a href="../FAQ/faq.html" class="navbarBtn from-center regularNav">
                             FAQ
                         </a>
-                        <a href="./contact/contact.html" class="navbarBtn from-center contactNav">
+                        <a href="../contact/contact.html" class="navbarBtn from-center contactNav">
                             Contact
                         </a>
                     </div>
