--- a/contact/contact.html
+++ b/contact/contact.html
@@ -71,7 +71,7 @@
                         </a>
                     </div>
                     <div class="brand-logo">
-                        <a href="index.html"><img src="../imgs/logo2021.png" alt="home" width="150px"></a>
+                        <a href="../index.html"><img src="../imgs/logo2021.png" alt="home" width="150px"></a>
                     </div>
                     <div class="navbarRight">
                         <a href="../sponsors/sponsors.html" class="navbarBtn from-center regularNav ">
